[gd_scene format=3 uid="uid://st4h1i4ffas4"]

[ext_resource type="Script" uid="uid://dw1qurim6po7r" path="res://actors/player/player.gd" id="1_niuxy"]
[ext_resource type="Shader" uid="uid://bcooihn4ai5j6" path="res://actors/player/player.gdshader" id="2_a744p"]
[ext_resource type="Script" uid="uid://dc4ufxni2j3t3" path="res://controllers/movement_controller.gd" id="2_esgq3"]
[ext_resource type="Texture2D" uid="uid://c6u7d76wfxdc8" path="res://assets/walkleft_L_n.png" id="3_388e2"]
[ext_resource type="Script" uid="uid://bpo0oc0hptwk5" path="res://controllers/input_controller.gd" id="3_kjkj0"]
[ext_resource type="Script" uid="uid://bam6m8wlayrl" path="res://controllers/animation_controller.gd" id="4_tue77"]
[ext_resource type="Script" uid="uid://ded1ed7hmw2h0" path="res://controllers/stats_controller.gd" id="5_kjkj0"]
[ext_resource type="Script" uid="uid://clk34hyx5nmkm" path="res://controllers/hitbox_controller.gd" id="6_15y17"]
[ext_resource type="Script" uid="uid://cwlnaspg8jrfu" path="res://controllers/weapon_controller.gd" id="12_7aotg"]
[ext_resource type="PackedScene" uid="uid://d1hiai13mkdgm" path="res://components/weapon/hand/hand.tscn" id="13_k67x5"]
[ext_resource type="PackedScene" uid="uid://4t2ffm466qis" path="res://components/weapon/lightsaber/lightsaber.tscn" id="14_k67x5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lsln6"]
shader = ExtResource("2_a744p")
shader_parameter/normal_map = ExtResource("3_388e2")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_niuxy"]
size = Vector2(110, 254)

[sub_resource type="CanvasTexture" id="CanvasTexture_hiosj"]

[sub_resource type="Animation" id="Animation_niuxy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_33vod"]
resource_name = "base_attack"

[sub_resource type="Animation" id="Animation_er1rk"]
resource_name = "dead"
length = 1.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.14044744, 0.14044744, 0.14044744, 1)]
}

[sub_resource type="Animation" id="Animation_mvpqy"]
resource_name = "down"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1yqc4"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_esgq3"]
resource_name = "left"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 1, 0, 1)]
}

[sub_resource type="Animation" id="Animation_k67x5"]
resource_name = "punch"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1.1956991, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 0.09807291),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_kjkj0"]
resource_name = "right"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hiosj"]
resource_name = "special"
length = 1.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.39958313, 0.79001546, 1.2048498, 1.7965989),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.6627451, 0.5529412, 1), Color(0.8209817, 0.2672945, 2.9263496e-05, 1), Color(0.96862745, 0.26666668, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ssdk0"]
resource_name = "switch_weapon"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.17207015, 0.12205788, 0.044374853, 1), Color(0.17207015, 0.12205788, 0.044374853, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_tue77"]
resource_name = "up"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.972549, 0.99215686, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_33vod"]
_data = {
&"RESET": SubResource("Animation_niuxy"),
&"base_attack": SubResource("Animation_33vod"),
&"dead": SubResource("Animation_er1rk"),
&"down": SubResource("Animation_mvpqy"),
&"idle": SubResource("Animation_1yqc4"),
&"left": SubResource("Animation_esgq3"),
&"punch": SubResource("Animation_k67x5"),
&"right": SubResource("Animation_kjkj0"),
&"special": SubResource("Animation_hiosj"),
&"switch_weapon": SubResource("Animation_ssdk0"),
&"up": SubResource("Animation_tue77")
}

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_hiosj"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rt46e"]
animation = &"punch"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0wchr"]
animation = &"special"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yeioo"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qct7d"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2vokq"]
xfade_time = 0.2
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tpopl"]
xfade_time = 0.2
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_0nck3"]
states/punch/node = SubResource("AnimationNodeAnimation_rt46e")
states/punch/position = Vector2(514.8, 62.4)
states/special/node = SubResource("AnimationNodeAnimation_0wchr")
states/special/position = Vector2(514, 160)
transitions = ["Start", "punch", SubResource("AnimationNodeStateMachineTransition_yeioo"), "Start", "special", SubResource("AnimationNodeStateMachineTransition_qct7d"), "special", "End", SubResource("AnimationNodeStateMachineTransition_2vokq"), "punch", "End", SubResource("AnimationNodeStateMachineTransition_tpopl")]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hiosj"]
animation = &"down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ssdk0"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7aotg"]
animation = &"left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k67x5"]
animation = &"right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_12xki"]
animation = &"up"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rt46e"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0wchr"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qrxv1"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dqf5y"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_otn2r"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ctwkf"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_icg72"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lj3dd"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nsxbo"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_yeioo"]
states/Start/position = Vector2(136.8, 101.7408)
states/down/node = SubResource("AnimationNodeAnimation_hiosj")
states/down/position = Vector2(274.96, 25.919994)
states/idle/node = SubResource("AnimationNodeAnimation_ssdk0")
states/idle/position = Vector2(415.6, 99.21152)
states/left/node = SubResource("AnimationNodeAnimation_7aotg")
states/left/position = Vector2(274.8, 190.19855)
states/right/node = SubResource("AnimationNodeAnimation_k67x5")
states/right/position = Vector2(585.04, 189.24683)
states/up/node = SubResource("AnimationNodeAnimation_12xki")
states/up/position = Vector2(584.39996, 26.399996)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_rt46e"), "idle", "left", SubResource("AnimationNodeStateMachineTransition_0wchr"), "left", "idle", SubResource("AnimationNodeStateMachineTransition_qrxv1"), "idle", "down", SubResource("AnimationNodeStateMachineTransition_dqf5y"), "down", "idle", SubResource("AnimationNodeStateMachineTransition_otn2r"), "idle", "up", SubResource("AnimationNodeStateMachineTransition_ctwkf"), "up", "idle", SubResource("AnimationNodeStateMachineTransition_icg72"), "idle", "right", SubResource("AnimationNodeStateMachineTransition_lj3dd"), "right", "idle", SubResource("AnimationNodeStateMachineTransition_nsxbo")]
graph_offset = Vector2(0, 3.0994415e-06)

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_qct7d"]
graph_offset = Vector2(-433.35464, 36.96459)
nodes/output/position = Vector2(432, 272)
nodes/MoveStateMachine/node = SubResource("AnimationNodeStateMachine_yeioo")
nodes/MoveStateMachine/position = Vector2(-336, 176)
nodes/AttackStateMachine/node = SubResource("AnimationNodeStateMachine_0nck3")
nodes/AttackStateMachine/position = Vector2(-336, 400)
nodes/AttackOneShot/node = SubResource("AnimationNodeOneShot_hiosj")
nodes/AttackOneShot/position = Vector2(128, 208)
node_connections = [&"output", 0, &"AttackOneShot", &"AttackOneShot", 0, &"MoveStateMachine", &"AttackOneShot", 1, &"AttackStateMachine"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_15y17"]
size = Vector2(110, 254)

[node name="BaseCharacter" type="CharacterBody2D" unique_id=1540911931]
material = SubResource("ShaderMaterial_lsln6")
scale = Vector2(0.5, 0.5)
motion_mode = 1
script = ExtResource("1_niuxy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=165994675]
position = Vector2(1, -127)
shape = SubResource("RectangleShape2D_niuxy")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1186194203]
position = Vector2(1.000001, -126.75)
scale = Vector2(109.99999, 254.5)
texture = SubResource("CanvasTexture_hiosj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1823954610]
libraries/ = SubResource("AnimationLibrary_33vod")

[node name="AnimationTree" type="AnimationTree" parent="." unique_id=568570010]
tree_root = SubResource("AnimationNodeBlendTree_qct7d")
anim_player = NodePath("../AnimationPlayer")
parameters/AttackOneShot/active = false
parameters/AttackOneShot/internal_active = false
parameters/AttackOneShot/request = 0

[node name="MovementController" type="Node" parent="." unique_id=2015551705]
script = ExtResource("2_esgq3")
metadata/_custom_type_script = "uid://dc4ufxni2j3t3"

[node name="InputController" type="Node" parent="." unique_id=571808249]
script = ExtResource("3_kjkj0")
metadata/_custom_type_script = "uid://bpo0oc0hptwk5"

[node name="AnimationController" type="Node" parent="." unique_id=1597031475]
script = ExtResource("4_tue77")
metadata/_custom_type_script = "uid://bam6m8wlayrl"

[node name="StatsController" type="Node" parent="." unique_id=349769875]
script = ExtResource("5_kjkj0")
metadata/_custom_type_script = "uid://ded1ed7hmw2h0"

[node name="HitboxController" type="Area2D" parent="." unique_id=1993264944]
position = Vector2(0, -126)
collision_layer = 2
collision_mask = 3
script = ExtResource("6_15y17")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxController" unique_id=1364542366]
position = Vector2(1, -1)
shape = SubResource("RectangleShape2D_15y17")

[node name="WeaponController" type="Node" parent="." unique_id=1935004389]
script = ExtResource("12_7aotg")
metadata/_custom_type_script = "uid://cwlnaspg8jrfu"

[node name="Hand" parent="WeaponController" unique_id=309820192 node_paths=PackedStringArray("actions_by_input") instance=ExtResource("13_k67x5")]
actions_by_input = {
"attack": NodePath("Punch")
}

[node name="Lightsaber" parent="WeaponController" unique_id=321760432 node_paths=PackedStringArray("actions_by_input") instance=ExtResource("14_k67x5")]
position = Vector2(38, -72)
actions_by_input = {
"attack": NodePath("Slash"),
"special": NodePath("LightBeam")
}
